# protocol-doc-generation

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  global.json  test.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: test.yml
app/: CMakeLists.txt  version.hpp.in
app/src/: main.cpp  options.cpp  options.hpp
cmake/: Config.cmake.in  install.cmake  pack.cmake  protodoc_generate.cmake  third-party-licenses.cmake  third-party-licenses.txt.in
lib/: CMakeLists.txt
lib/include/: backend.hpp  diagram.hpp  generator.hpp
lib/include/backends/: asciidoc.hpp  latex.hpp
lib/include/diagrams/: ascii.hpp
lib/include/protodoc/: generator.hpp
lib/src/: generator.cpp  inja_callbacks.cpp  inja_callbacks.hpp
lib/src/backends/: asciidoc.cpp  latex.cpp
lib/src/diagrams/: ascii.cpp
lib/src/json/: def.hpp  endian.hpp  enum.cpp  field.cpp  field.hpp  frame.cpp  frame.hpp  json.hpp  layer.cpp  layer.hpp  message.cpp  message.hpp  namespace.cpp  namespace.hpp  platform.cpp  platform.hpp  types.hpp  units.hpp
lib/src/json/fields/: bitfield.cpp  bitfield.hpp  bundle.cpp  bundle.hpp  data.cpp  data.hpp  enum.cpp  enum.hpp  field.cpp  field.hpp  field_vector.cpp  field_vector.hpp  float.cpp  float.hpp  frame.cpp  frame.hpp  int.cpp  int.hpp  layer.cpp  layer.hpp  list.cpp  list.hpp  message.cpp  message.hpp  namespace.cpp  namespace.hpp  optional.cpp  optional.hpp  platform.cpp  platform.hpp  ref.cpp  ref.hpp  set.cpp  set.hpp  string.cpp  string.hpp  variant.cpp  variant.hpp
lib/src/schema/: schema.cpp  schema.hpp
schemas/: protodoc.schema.json
templates/: custom.json  lang_en.json  protodoc.json  protodoc_dbg_tut1.json
templates/asciidoc/: field.adoc  fields.adoc  frames.adoc  message_row.adoc  messages.adoc  namespace.adoc  namespaces.adoc  platforms.adoc
templates/asciidoc/fields/: bitfield.adoc  enum.adoc  field.adoc  float.adoc  int.adoc  optional.adoc  ref.adoc
templates/latex/: frames.tex  messages.tex  platforms.tex
templates/latex/fields/: int.tex
tests/: CMakeLists.txt
tests/src/: inja_callbacks.cpp  schema.cpp
tests/src/fields/: bitfield.cpp  bitfield.xml  common.cpp  common.hpp
vcpkg-ports/commsdsl/: portfile.cmake  vcpkg.json
vcpkg-ports/inja/: portfile.cmake  types.hpp.in
